Add swiper with functionality

--- a/index.html
+++ b/index.html
@@ -181,15 +181,35 @@
                     <p class="opinion-text">Our trip to Morocco was truly a onece in a lifetime experience and we are so grateful to everyone that made it happen seamlessly. Our travel planner, Jaouad, was increadible.</p>
                     <p class="opinion-author">-Vand D</p>
                     <p class="opinion-author-company">Happy Treloo</p>
+                    <div class="opinion-author-pic"><img src="./pic/opinion-author-pic-1.png" alt=""><span><img src="./pic/star.png" alt="">4.5</span>
+                    </div>
                 </div>
                 <div class="swiper-slide opinion">
                     <p class="opinion-text">Our trip to Morocco was truly a onece in a lifetime experience and we are so grateful to everyone that made it happen seamlessly. Our travel planner, Jaouad, was increadible.</p>
-                    <p class="opinion-author">-Vand D</p>
+                    <p class="opinion-author">-Tru Vio</p>
                     <p class="opinion-author-company">Happy Treloo</p>
+                    <div class="opinion-author-pic"><img src="./pic/opinion-author-pic-2.png" alt=""><span><img src="./pic/star.png" alt="">4.9</span>
+                    </div>
+                </div>
+                <div class="swiper-slide opinion">
+                    <p class="opinion-text">Our trip to Morocco was truly a onece in a lifetime experience and we are so grateful to everyone that made it happen seamlessly. Our travel planner, Jaouad, was increadible.</p>
+                    <p class="opinion-author">-Tru Vio</p>
+                    <p class="opinion-author-company">Happy Treloo</p>
+                    <div class="opinion-author-pic"><img src="./pic/opinion-author-pic-2.png" alt=""><span><img src="./pic/star.png" alt="">4.9</span>
+                    </div>
+                </div>
+                <div class="swiper-slide opinion">
+                    <p class="opinion-text">Our trip to Morocco was truly a onece in a lifetime experience and we are so grateful to everyone that made it happen seamlessly. Our travel planner, Jaouad, was increadible.</p>
+                    <p class="opinion-author">-Tru Vio</p>
+                    <p class="opinion-author-company">Happy Treloo</p>
+                    <div class="opinion-author-pic"><img src="./pic/opinion-author-pic-2.png" alt=""><span><img src="./pic/star.png" alt="">4.9</span>
+                    </div>
                 </div>
             </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div class="swipe-buttons">
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
             </div>
         </section>
     </main>
