Add footer with styles

--- a/index.html
+++ b/index.html
@@ -212,6 +212,21 @@
             </div>
             </div>
         </section>
+        <footer id="footer" class="footer">
+            <div class="footer-pic-wrapper">
+                <img class="footer-pic" src="./pic/footer-pic.png" alt="">
+                <h3 class="footer-pic-heading">Don’t Miss The 50% Discount if You register Today</h3>
+                <button class="footer-pic-btn">Register Today</button>
+            </div>
+            <div class="footer-info">
+                <div class="footer-info__rights">© 2022 Treloo LLC - All right reserved.</div>
+                <ul class="footer-info__menu">
+                    <li class="footer-info__menu-item">Review</li>
+                    <li class="footer-info__menu-item">Tips</li>
+                    <li class="footer-info__menu-item">Alerts</li>
+                    <li class="footer-info__menu-item">Blog</li>
+                </ul>
+        </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="swiper.js"></script>
